--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,9 @@
+:root {
+    --color: darkblue;
+}
+
 nav {
-    background-color: darkblue;
+    background-color: var(--color);
     padding: 10px;
 }
 
@@ -10,7 +14,7 @@ nav a {
 }
 
 h1 {
-    color: darkblue;
+    color: var(--color);
 }
 
 main img {
