--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,4 @@
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
 }
 
@@ -11,16 +9,22 @@
 nav {
     background-color: var(--color);
     padding: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 nav a {
     color: white;
     display: block;
     padding: 20px;
+    text-decoration: none;
 }
 
 h1 {
     color: var(--color);
+    padding: 10px 5px;
+    border-bottom: 1px solid black;
 }
 
 main img {
@@ -38,12 +42,16 @@ p {
 
 main {
     max-width: 840px;
+    grid-column: 2/3;
+    grid-row: 1/2;
 }
 
 aside {
     width: 20rem;
     text-align: center;
     position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 
 aside img {
@@ -76,3 +84,13 @@ aside h2 {
     top: 47px;
     left: 150px;
 }
+
+header, .grid, footer {
+    max-width: 840px;
+    margin: 0 auto;
+}
+
+.grid {
+    display: grid;
+}
+
