W04 Rafting Project: Update About Us Page

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -4,59 +4,157 @@
     --gray: #7a7d7dff;
     --timberwolf: #d0cfcfff;
     --davys-gray: #565254ff;
+    --max-width: auto;
 }
 
 h1,
 h2,
 h3,
-p {
+p,
+a,
+figcaption {
     color: var(--davys-gray);
 }
 
-.sociallinks a {
+.sociallinks a,
+nav a {
     text-decoration: none;
 }
 
+header,
+footer,
+section,
+.hero {
+    margin: 10px 0px;
+}
 
+header {
+    background-color: var(--gray);
+    display: grid;
+    grid-template-columns: repeat(15, 1fr);
+    padding: 5px 10px;
+}
+
+header img {
+    max-width: 90px;
+    grid-column: 3/5;
+    align-self: center;
+}
+
+header nav {
+    grid-column: 7/15;
+    align-self: center;
+    display: flex;
+    justify-content: space-around;
+    padding: 0px;
+    background-color: var(--snow);
+}
 
 body {
-    max-width: 700px;
     background-color: var(--snow);
+    max-width: var(--max-width);
 }
 
 .soap img {
     display: block;
     width: 100%;
-    height: auto;
+    max-height: 500px;
 }
 
 .hero h1 {
     position: absolute;
-    top: 260px;
-    max-width: 50%;
-    padding: 10px 160px;
+    top: 150px;
     text-align: center;
-    left: 9px;
-    right: 9px;
-    margin: 10px;
-    opacity: 80%;
-    background-color: var(--snow);
-
+    left: 20%;
+    padding: 0px 0%;
+    right: 20%;
+    margin: 20px;
+    max-width: var(--max-width);
 }
 
 article {
     position: absolute;
     background-color: var(--timberwolf);
     opacity: 85%;
-    top: 330px;
-    max-width: 650px;
-    margin: 10px;
+    top: 210px;
+    margin: 50px;
     padding: 10px;
     left: 9px;
     right: 9px;
+    max-width: var(--max-width);
 }
 
 article img {
     float: right;
     width: 190px;
+}
+
+.adventure {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+
+h2 {
+    text-align: center;
+}
+
+.history h2 {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    padding: 0px;
+    margin: 8px;
+}
+
+.history {
+    display: grid;
+    grid-template-columns: 2fr 1fr 2fr;
+    padding: 10px 10px 20px 10px;
+    margin: 0px;
+    background-color: var(--timberwolf);
+}
+
+.history p {
+    padding: 0px 10px;
+    margin: 0px;
+    grid-row: 2/3;
+}
+
+.history img {
+    max-width: 200px;
+    height: auto;
+    grid-column: 2/3;
+    grid-row: 2/3;
+}
+
+figure {
+    margin: 0px;
+    justify-items: center;
+}
+
+.adventure img {
+    width: 95%;
+    height: auto;
+}
+
+footer {
+    background-color: var(--gray);
+    display: grid;
+    grid-template-columns: 1.5fr auto 6fr auto 1.5fr;
+    grid-template-rows: 1fr;
+}
+
+footer p {
+    color: var(--snow);
+    grid-column: 3/4;
+    text-align: center;
+}
+
+.sociallinks {
+    grid-column: 5/6;
+    grid-row: 1/2;
+    align-self: center;
+}
+
+.sociallinks img {
+    width: 20px;
 }
