--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -9,16 +9,18 @@
 h1,
 h2,
 h3,
+h4,
 p,
 a,
+caption,
+table,
 figcaption, 
 label,
 legend {
     color: var(--davys-gray);
 }
 
-.sociallinks a,
-nav a {
+a {
     text-decoration: none;
 }
 
@@ -55,13 +57,13 @@ body {
     background-color: var(--snow);
 }
 
-.soap img {
+.hero img {
     display: block;
     width: 100%;
     max-height: 500px;
 }
 
-.hero h1 {
+.soap h1 {
     position: absolute;
     top: 150px;
     text-align: center;
@@ -188,6 +190,66 @@ label {
     padding-right: 10px;
 }
 
-button {
+form button {
     margin-left: 80%;
 }
+
+.raft img{
+    width: 600px;
+    height: auto;
+    margin: 10px;
+}
+
+.raft {
+    display: grid;
+    align-content: center;
+    justify-content: center;
+
+}
+
+.items img {
+    max-width: 100%;
+    height: auto;
+}
+
+.item {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-gap: 20px;
+    padding: 20px;
+}
+.items {
+    margin: 10px;
+    text-align: center;
+}
+
+table {
+    border-collapse: collapse;
+    border: 2px solid var(--davys-gray);
+    font-family: sans-serif;
+    font-size: 0.8rem;
+    letter-spacing: 1px;
+}
+
+caption {
+    caption-side: bottom;
+    padding: 10px;
+    font-weight: bold;
+  }
+  
+  thead,
+  tfoot {
+    background-color: var(--timberwolf);
+  }
+  
+  th,
+  td {
+    border: 1px solid var(--gray);
+    padding: 8px 10px;
+  }
+
+.table {
+    display: grid;
+    justify-content: center;
+}
+  
